Updated CSS centering and Updated DB

--- a/music/templates/music/index.html
+++ b/music/templates/music/index.html
@@ -28,7 +28,7 @@
 
   <!-- HERO -->
   <div class="jumbotron text-center">
-    <h1>Welcome to Andre's Records </h1>
+    <h1>Welcome to Ninja's Records</h1>
     <p class="lead">A Fantastic Product!</p>
     <a href="#" class="btn btn-primary">Learn More</a>
   </div>
