Removed Humanized updated template/muscian_info.py

--- a/music/templates/musician_info.html
+++ b/music/templates/musician_info.html
@@ -3,10 +3,6 @@
 
 <h1>{{ musician.name }}</h1>
 
-{% load humanize %}
-
 {% for album in albums %}
-    <strong>Name:</strong> <a href="{% url 'album_info' album.id %}"> {{ album.name }} </a><br/>
-    <strong>Genre:</strong> {{ album.genre }}<br/>
-    <strong>Date Released:</strong> {{ album.publish_date }}
+    Name: <a href="{% url 'album_info' album.id %}"> {{ album.name }} </a>
 {% endfor %}
