Added redirect edit html pg

--- a/music/templates/album_info.html
+++ b/music/templates/album_info.html
@@ -14,7 +14,7 @@ Date Released: {{ album.publish_date }}
 <ul>
     {% for song in songs %}
         <li>
-          Name: <a href="{% url 'song_info' song.id %}"> {{ song.name }} </a>
+          <a href="{% url 'song_info' song.id %}"> {{ song.name }} </a>
         </li>
     {% endfor %}
 </ul>
