Didnt save changes before pushing

--- a/music/templates/song_info.html
+++ b/music/templates/song_info.html
@@ -3,5 +3,5 @@
 
 <h1>{{song.name}}</h1>
 
-<strong>Artist:</strong> {{ song.artist }}<br/>
-<strong>Album:</strong> {{ song.album }}
+Artist: {{ song.artist }}<br/>
+Album: {{ song.album }}
